[package]
name = "auth-rs"
description = "Authorization and authentication service"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"
authors = ["CodeDead <admin@codedead.com>"]
readme = "README.md"
homepage = "https://codedead.com/"
keywords = ["api", "authorization", "authentication", "auth"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
uuid = { verson = "1.4.1", features = ["serde", "v4"] }
mongodb = "2.6.0"
chrono = "0.4.26"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
futures = "0.3.28"
dotenvy = "0.15.7"
actix-cors = "0.6.4"
argon2 = "0.5.1"
regex = "1.9.1"
email_address = "0.2.4"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
strip = "symbols"
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
