[package]
name = "auth-rs"
description = "Authorization and authentication service"
version = "0.2.0"
edition = "2021"
rust-version = "1.71.1"
authors = ["CodeDead <admin@codedead.com>"]
readme = "README.md"
license= "GPL-3.0-only"
homepage = "https://codedead.com/"
keywords = ["api", "authorization", "authentication", "auth"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
mongodb = "2.6.0"
chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
dotenvy = "0.15.7"
argon2 = "0.5.1"
regex = "1.9.3"
jsonwebtoken = "8.3.0"
env_logger = "0.10.0"
log = "0.4.19"
actix-web-grants = "3.0.2"
utoipa = "3.4.4"
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }

[profile.dev]
panic = "abort"

[profile.release]
lto = true
strip = "symbols"
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
