[package]
name = "auth-rs"
description = "Authorization and authentication service"
version = "0.2.0"
edition = "2021"
rust-version = "1.72.1"
authors = ["CodeDead <admin@codedead.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://codedead.com/"
keywords = ["api", "authorization", "authentication", "auth"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
actix-web-grants = "3.0.2"
mongodb = { version = "2.7.0", features = ["bson-chrono-0_4"] }
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
dotenvy = "0.15.7"
argon2 = "0.5.2"
regex = "1.9.5"
jsonwebtoken = "8.3.0"
env_logger = "0.10.0"
log = "0.4.20"
utoipa = "3.5.0"
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }

[profile.dev]
panic = "abort"

[profile.release]
lto = true
strip = "symbols"
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
